--- a/4_overfitting_regularization/overfitting_regularization.ipynb
+++ b/4_overfitting_regularization/overfitting_regularization.ipynb
@@ -11,6 +11,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Внимание! \n",
+    "Этот ноутбук может плохо отображаться на github - не всегда видны выводы на печать в ячейках. \n",
+    "\n",
+    "Лучше смотреть через \n",
+    "https://nbviewer.org/github/bonvech/ml-intro-2/blob/main/4_overfitting_regularization/overfitting_regularization.ipynb"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Imports"
    ]
   },
