--- a/6_feature_engineering_selection/homework.ipynb
+++ b/6_feature_engineering_selection/homework.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
        "1                          3.40   1050.0  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1343,7 +1343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1362,11 +1362,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Result on original data: 0.961111\n",
+      "Result after scaling 0.983333\n"
+     ]
+    }
+   ],
    "source": [
-    "## your code"
+    "main_model = LogisticRegression(solver='liblinear', penalty='l1')\n",
+    "pipe_baseline = make_pipeline(main_model)\n",
+    "pipe_scaled = make_pipeline(StandardScaler(), main_model) # fix to select only once\n",
+    "\n",
+    "print('Result on original data: {:f}'.format(cross_val_score(pipe_baseline, wine_data, wine_labels, \n",
+    "                      scoring='accuracy', cv=5).mean()))\n",
+    "\n",
+    "print('Result after scaling {:f}'.format(cross_val_score(pipe_scaled, wine_data, wine_labels, \n",
+    "                      scoring='accuracy', cv=5).mean()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['alcohol', 'flavanoids', 'color_intensity', 'hue',\n",
+      "       'od280/od315_of_diluted_wines', 'proline'],\n",
+      "      dtype='object')\n",
+      "Original shape: (178, 13)\n",
+      "Shape after selection: (178, 6)\n"
+     ]
+    }
+   ],
+   "source": [
+    "selection_model = RandomForestClassifier(random_state=42)\n",
+    "selector = SelectFromModel(selection_model).fit(wine_data, wine_labels)\n",
+    "wine_data_pruned = selector.transform(wine_data)\n",
+    "print(wine_data.columns[selector.get_support()])\n",
+    "print(f'Original shape: {wine_data.shape}')\n",
+    "print(f'Shape after selection: {wine_data_pruned.shape}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Result after selection 0.983333\n"
+     ]
+    }
+   ],
+   "source": [
+    "pipe_selection = make_pipeline(StandardScaler(), SelectFromModel(selection_model), main_model) # fix to select only once\n",
+    "print('Result after selection {:f}'.format(cross_val_score(pipe_selection, wine_data, wine_labels, \n",
+    "                                    scoring='accuracy', cv=5).mean()))"
    ]
   },
   {
@@ -1374,7 +1436,10 @@
    "metadata": {},
    "source": [
     "***\n",
-    "#### `RESULTS`"
+    "#### `RESULTS`\n",
+    "\n",
+    "Применение логистической регрессии к неотмасштабированым данным дает accuracy 0.96. После применения StandardScaler точность увеличилась до 0.983.\n",
+    "После этого применили feature selection на отмасштабированных данных. Количество признаков уменьшилось с 13 до 6, а точность осталась такой же 0.983"
    ]
   },
   {
